补齐SEMI/虚拟线程/IN分片三缺口，47测试全绿
Co-authored-by: mccxj <mccxj@users.noreply.github.com>